concluido...por enquanto

--- a/BugsBunny/app/src/main/res/values/strings.xml
+++ b/BugsBunny/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Bugs Bunny</string>
+    <string name="app_name">WhatsUpDoc</string>
     <string name="action_settings">Settings</string>
 
 
